RESOLVED FIXED185723
[MSE][GStreamer] Fix the deadlock caused by bug 185242 (r231351)
https://bugs.webkit.org/show_bug.cgi?id=185723
Summary [MSE][GStreamer] Fix the deadlock caused by bug 185242 (r231351)
Yacine Bandou
Reported 2018-05-17 06:21:47 PDT
After a detailed investigation, I found that, the patch r231351 doesn't fix the crash that expected to fix, it just replaces it by a deadlock. This Patch will remove a part of r231351 which cause a deadlock. See https://bugs.webkit.org/show_bug.cgi?id=185242#c11 and https://bugs.webkit.org/show_bug.cgi?id=185242#c12 Thanks to Alicia for her explanations in bugs 185242 and 185592.
Attachments
Patch (2.20 KB, patch)
2018-05-17 10:55 PDT, Yacine Bandou
no flags
Yacine Bandou
Comment 1 2018-05-17 10:55:42 PDT
WebKit Commit Bot
Comment 2 2018-05-22 02:32:52 PDT
Comment on attachment 340601 [details] Patch Clearing flags on attachment: 340601 Committed r232058: <https://trac.webkit.org/changeset/232058>
WebKit Commit Bot
Comment 3 2018-05-22 02:32:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.