Source/WebCore/platform/graphics/gstreamer/mse/WebKitMediaSourceGStreamer.cpp
@@ -505,15 +505,6 @@ void webKitMediaSrcFreeStream(WebKitMediaSrc* source, Stream* stream)
         // Don't trigger callbacks from this appsrc to avoid using the stream anymore.
         gst_app_src_set_callbacks(GST_APP_SRC(stream->appsrc), &disabledAppsrcCallbacks, nullptr, nullptr);
         gst_app_src_end_of_stream(GST_APP_SRC(stream->appsrc));
-        gst_element_set_state(stream->appsrc, GST_STATE_NULL);
-        gst_bin_remove(GST_BIN(source), stream->appsrc);
-        stream->appsrc = nullptr;
-    }
-
-    if (stream->parser) {
-        gst_element_set_state(stream->parser, GST_STATE_NULL);
-        gst_bin_remove(GST_BIN(source), stream->parser);
-        stream->parser = nullptr;
     }
 
     GST_OBJECT_LOCK(source);
